--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.4.1"
+    "events": "^3.3.0",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "moment": "^2.29.1",
+    "mongoose": "^6.2.7",
+    "nats": "^2.6.1",
+    "response-time": "^2.3.2",
+    "router": "^1.3.6",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2",
+    "winston": "^3.6.0"
   }
 }
