--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "socket-service",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Krateo Socket Service",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "events": "^3.3.0",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "moment": "^2.29.1",
-    "mongoose": "^6.2.7",
     "nats": "^2.6.1",
     "response-time": "^2.3.2",
     "router": "^1.3.6",
