feat(chart): version

--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -3,8 +3,8 @@ name: socket-service
 description: Krateo PlatformOps Socket Service
 type: application
 
-version: 0.1.0
-appVersion: 0.1.0
+version: VERSION
+appVersion: VERSION
 
 maintainers:
   - name: Mauro Sala
