fix(chart): name

--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: log-service
-description: Krateo PlatformOps Log Service
+name: socket-service
+description: Krateo PlatformOps Socket Service
 type: application
 icon: "https://github.com/krateoplatformops/community/blob/main/logos/black/icon.svg"
 
