feat(socket): auth

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -70,6 +70,8 @@ podEnv:
       secretKeyRef:
         name: krateo-secret
         key: MONGODB_URI
+  - name: REQUIRE_AUTHENTICATION
+    value: "true"
 
 ingress:
   enabled: true
