--- a/.github/workflows/tag-build.yaml
+++ b/.github/workflows/tag-build.yaml
@@ -71,3 +71,4 @@ jobs:
           method: "POST"
           headers: '{ "x-token": "${{ secrets.WEBHOOK_TOKEN }}" }'
           body: '{ "project": "${{ github.event.repository.name }}", "tag": "${{ steps.tagger.outputs.VERSION_TAG }}" }'
+          timeout: 5000
