--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: socket-service
-description: Krateo PlatformOps Socket Service
+name: notification-service
+description: Krateo PlatformOps Notification Service
 type: application
 icon: "https://github.com/krateoplatformops/community/blob/main/logos/black/icon.svg"
 
