fix(chart): env vars

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -60,25 +60,13 @@ podContainerPorts:
 # put your env variables here
 podEnvFrom:
   - configMapRef:
-      name: api-cookie-config
-  - configMapRef:
-      name: krateo-uri-config
+      name: krateo-config
+  - secretRef:
+      name: krateo-secret
 
 podEnv:
   - name: LOG_LEVEL
     value: info
-  - name: "MONGODB_URI"
-    valueFrom:
-      secretKeyRef:
-        name: krateo-secret
-        key: MONGODB_URI
-  - name: REQUIRE_AUTHENTICATION
-    value: "true"
-  - name: "COOKIE_SECRET"
-    valueFrom:
-      secretKeyRef:
-        name: api-cookie-secret
-        key: COOKIE_SECRET
 
 ingress:
   enabled: false
