--- a/.github/workflows/branches-build.yaml
+++ b/.github/workflows/branches-build.yaml
@@ -12,6 +12,10 @@ jobs:
     name: Create docker image
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@master
