--- a/.github/workflows/tag-build.yaml
+++ b/.github/workflows/tag-build.yaml
@@ -10,6 +10,10 @@ jobs:
     name: Create docker image
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Get tag
         id: tag
         uses: dawidd6/action-get-tag@v1
@@ -50,6 +54,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Set tag
         run: echo "::set-output name=VERSION_TAG::$(git describe --dirty --always --tags | sed 's/-/./2' | sed 's/-/./2' )"
         id: tagger
