--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@kubernetes/client-node": "^0.17.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "object-key-validator": "^1.1.2",
+    "request": "^2.88.2",
     "response-time": "^2.3.2",
-    "router": "^1.3.6",
     "socket.io": "^4.4.1",
     "winston": "^3.6.0"
   }
