--- a/.github/workflows/tag-build.yaml
+++ b/.github/workflows/tag-build.yaml
@@ -3,7 +3,7 @@ name: Build stable Docker image (tags)
 on:
   push:
     tags:
-      - "*"
+      - '*'
 
 jobs:
   build:
@@ -43,7 +43,7 @@ jobs:
           tags: ghcr.io/krateoplatformops/${{ github.event.repository.name }}:${{steps.tag.outputs.tag}}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-          build-args: "VERSION=${{ steps.tag.outputs.tag }}"
+          build-args: 'VERSION=${{ steps.tag.outputs.tag }}'
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
@@ -74,7 +74,7 @@ jobs:
         uses: indiesdev/curl@v1.1
         with:
           url: ${{ secrets.WEBHOOK_URL }}
-          method: "POST"
+          method: 'POST'
           headers: '{ "x-token": "${{ secrets.WEBHOOK_TOKEN }}" }'
           body: '{ "project": "${{ github.event.repository.name }}", "tag": "${{ steps.tagger.outputs.VERSION_TAG }}" }'
           timeout: 5000
