--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "socket-service",
+  "name": "notification-service",
   "version": "VERSION",
-  "description": "Krateo Socket Service",
+  "description": "Krateo Notification Service",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install",
     "lint": "prettier --check .",
     "format": "prettier --write . && git add -A ."
   },
