--- a/.github/workflows/tag-build.yaml
+++ b/.github/workflows/tag-build.yaml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          submodules: recursive
+      - name: Submodule
+        run: git submodule update --recursive --remote --merge --force
       - name: Get tag
         id: tag
         uses: dawidd6/action-get-tag@v1
@@ -54,8 +54,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          submodules: recursive
+      - name: Submodule
+        run: git submodule update --recursive --remote --merge --force
       - name: Set tag
         run: echo "::set-output name=VERSION_TAG::$(git describe --dirty --always --tags | sed 's/-/./2' | sed 's/-/./2' )"
         id: tagger
@@ -75,6 +75,6 @@ jobs:
         with:
           url: ${{ secrets.WEBHOOK_URL }}
           method: 'POST'
+          timeout: 5000
           headers: '{ "x-token": "${{ secrets.WEBHOOK_TOKEN }}" }'
           body: '{ "project": "${{ github.event.repository.name }}", "tag": "${{ steps.tagger.outputs.VERSION_TAG }}" }'
-          timeout: 5000
